[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40882

--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -49,7 +49,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-15 00:54+0200\n"
+"PO-Revision-Date: 2006-09-23 13:30+0200\n"
 "Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -66,18 +66,17 @@ msgstr "Continuar sin cargador de arranque"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Debe establecer algunas variables en el «OpenFirmware» de Pegasos para poder "
+"Debe establecer algunas variables en el firmware de Genesi para poder "
 "arrancar el sistema de forma automática. Al final de la instalación el "
-"sistema reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
-"establezca las variables que se indican a continuación para activar el "
-"arranque automático:"
+"sistema se reiniciará. En el símbolo de espera de órdenes del firmware "
+"establezca las variables de firmware que se indican a continuación para "
+"activar el arranque automático:"
 
 #. Type: note
 #. Description
@@ -89,9 +88,8 @@ msgstr "También podrá cargar el núcleo manualmente si introduce:"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "en la línea de órdenes de «OpenFirmware»."
+msgstr "en la línea de órdenes del firmware."
 
 #. Type: note
 #. Description
@@ -118,13 +116,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Sólo tendrá que hacer ésto una vez. Para pasar al siguiente paso de la "
-"instalación deberá introducir, más adelante, la orden «boot» o reiniciar el "
+"Sólo tendrá que hacer ésto una vez. Para acceder a su sistema recién "
+"instalado deberá introducir, más adelante, la orden «boot» o reiniciar el "
 "sistema."
 
 #. Type: note
