--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-16 14:47+0200\n"
+"PO-Revision-Date: 2006-09-23 20:02+0200\n"
 "Last-Translator: Bart Cornelis <cobaco@skolelinux.no>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,18 +32,17 @@ msgstr "Verder gaan zonder opstartlader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Sommige variabelen van de Pegasos OpenFirmware dienen ingesteld te worden "
-"opdat uw systeem automatisch zou opstarten. Aan het einde van het "
-"installatieproces zal uw systeem heropgestart worden. Op de OpenFirmware-"
-"prompt dienen de volgende OpenFirmware-variabelen ingesteld te worden om "
-"automatisch opstarten te activeren:"
+"In de Genesi firmware dienen enkele variabelen ingesteld te worden om uw "
+"systeem automatisch te kunnen opstarten. Uw systeem zal aan het einde van "
+"het installatieproces herstart worden. Bij de firmware-prompt dienen de "
+"volgende firmware-variabelen ingesteld te worden om automatisch opstarten te "
+"activeren:"
 
 #. Type: note
 #. Description
@@ -57,9 +56,8 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "op de OpenFirmware-prompt."
+msgstr "bij de firmware-prompt."
 
 #. Type: note
 #. Description
@@ -87,14 +85,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"U hoeft dit slechts eenmalig te doen. Om verder te gaan met de volgende fase "
-"van de installatie geeft u vervolgens het commando 'boot' of herstart u het "
-"systeem."
+"U hoeft dit slechts eenmalig te doen. Om uw nieuw geïnstalleerde systeem op "
+"te starten geeft u vervolgens het commando 'boot' of herstart u het systeem."
 
 #. Type: note
 #. Description
