--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-08-27 17:45-0300\n"
+"PO-Revision-Date: 2006-09-23 19:48-0300\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team:  Debia-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,18 +27,17 @@ msgstr "Continuar sem carregador de inicialização"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Algumas variáveis precisam ser definidas no Pegasos OpenFirmware para que "
-"seu sistema possa ser capaz de ser iniciado automaticamente. Ao final da "
-"instalação, o sistema irá reiniciar. No prompt de comandos do Pegasos "
-"OpenFirmware, defina as seguintes variáveis do OpenFirmware para habilitar a "
-"inicialização automática :"
+"Algumas variáveis precisam ser definidas no firmware Genesi para que seu "
+"sistema possa ser capaz de ser iniciado automaticamente. Ao final da "
+"instalação, o sistema irá reiniciar. No prompt de comandos do firmware, "
+"defina as seguintes variáveis do firmware para habilitar a inicialização "
+"automática :"
 
 #. Type: note
 #. Description
@@ -51,9 +50,8 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "no prompt do OpenFirmware."
+msgstr "no prompt do firmware."
 
 #. Type: note
 #. Description
@@ -81,14 +79,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Você precisará fazer isto somente uma única vez. Após fazê-lo, informe o "
-"comando \"boot\" ou reinicie o sistema para prosseguir até o próximo estágio "
-"da instalação."
+"comando \"boot\" ou reinicie o sistema para prosseguir ao seu novo sistema "
+"instalado."
 
 #. Type: note
 #. Description
