--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-15 22:23+0000\n"
+"PO-Revision-Date: 2006-09-23 18:28+0000\n"
 "Last-Translator:  Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team:  Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,17 +29,16 @@ msgstr "Continuar sem carregador do sistema"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Algumas variáveis necessitam ser definidas no Pegasos OpenFirmware de modo a "
-"que o seu sistema Debian arranque automaticamente.  No fim da instalação, o "
-"sistema irá reiniciar.  Na linha de comandos do Pegasos OpenFirmware, defina "
-"as seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
+"Algumas variáveis necessitam ser definidas no firmware Genesi para que o seu "
+"sistema arranque automaticamente.  No fim da instalação, o sistema irá "
+"reiniciar.  Na linha de comandos do firmware, defina as seguintes variáveis "
+"do firmware para habilitar o arranque automático:"
 
 #. Type: note
 #. Description
@@ -51,9 +50,8 @@ msgstr "Em alternativa, poderá iniciar o kernel manualmente introduzindo :"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "na prompt do OpenFirmware."
+msgstr "na prompt do firmware."
 
 #. Type: note
 #. Description
@@ -80,13 +78,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Só necessita fazer isto uma vez.  Depois, introduza o comando \"boot\" ou "
-"reinicie o sistema para continuar com a próxima etapa da instalação."
+"reinicie o sistema para prosseguir para o seu sistema acabado de instalar."
 
 #. Type: note
 #. Description
