[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40901

--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-15 17:06+0300\n"
+"PO-Revision-Date: 2006-09-24 11:56+0300\n"
 "Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
 "Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,17 +33,15 @@ msgstr "המשך ללא מנהל אתחול"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"כמה משתנים צריכים להיקבע ב-Pegasos·OpenFirmware כדי שהמערכת שלך תאתחל את "
-"דביאן אוטומטית. בסוף ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של "
-"Pegasos·OpenFirmware, תוכל לקבוע את משתני OpenFirmware הבאים כדי לאפשר אתחול "
-"אוטומטי:"
+"כמה משתנים צריכים להיקבע בקושחת Genesi כדי שהמערכת שלך תאותחל אוטומטית. בסוף "
+"ההתקנה, המערכת שלך תאותחל מחדש. בבקשת הקלט של קושחת Genesi, תוכל לקבוע את "
+"המשתנים הבאים כדי לאפשר אתחול אוטומטי:"
 
 #. Type: note
 #. Description
@@ -55,9 +53,8 @@ msgstr "לחלופין, תוכל לאתחל את הקרנל ידנית על יד
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "בשורת הקלט של OpenFirmware."
+msgstr "בשורת הקלט של הקושחה."
 
 #. Type: note
 #. Description
@@ -83,13 +80,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "את פעולה זאת תצטרך לעשות רק פעם אחת. לאחר מכן, הכנס את הפקודה \"boot\" או "
-"אתחל את המערכת כדי להמשיך לשלב ההתקנה הבא."
+"אתחל את המערכת כדי להמשיך למערכת החדשה שלך."
 
 #. Type: note
 #. Description
