[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40920

--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-11 21:07+0200\n"
+"PO-Revision-Date: 2006-09-24 21:56+0200\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,18 +39,18 @@ msgstr "Ohne Bootloader fortfahren"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Einige Variablen müssen in der Pegasos OpenFirmware eingestellt sein, damit "
-"der Computer automatisch startet. Am Ende der Installation wird der Computer "
-"neu starten. Stellen Sie die folgenden Pegasos-OpenFirmware-Variablen am "
-"Boot-Prompt ein, damit der Computer automatisch startet."
+"Einige Variablen müssen in der Genesi-Firmware eingestellt sein, damit Ihr "
+"System automatisch startet. Am Ende der Installation wird das System neu "
+"starten. Stellen Sie die folgenden Firmware-Variablen am Firmware-Prompt "
+"ein, damit der Computer automatisch startet:"
 
+# FIXME: remove space
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
@@ -63,9 +63,8 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr " an der Eingabeaufforderung von OpenFirmware eingeben."
+msgstr "an der Eingabeaufforderung der Firmware."
 
 #. Type: note
 #. Description
@@ -94,14 +93,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Dies muss nur einmal ausgeführt werden. Geben Sie danach den »boot«-Befehl "
-"ein oder starten Sie das System neu, um mit dem nächsten "
-"Installationsschritt fortzufahren."
+"Dies muss nur einmal getan werden. Geben Sie danach den »boot«-Befehl ein "
+"oder starten Sie das System neu, um mit Ihrem neu installierten System "
+"fortzufahren."
 
 #. Type: note
 #. Description
