--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -26,7 +26,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-16 19:16+0200\n"
+"PO-Revision-Date: 2006-09-24 13:23+0200\n"
 "Last-Translator: Giuseppe Sacco <eppesuig@debian.org>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -43,17 +43,16 @@ msgstr "Continuare senza un boot loader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Alcune variabili di Pegasos OpenFirmware vanno impostate per poter avviare "
-"il sistema Debian in automatico. Al termine della installazione il sistema "
-"verrà riavviato. Al prompt di Pegasos OpenFirmware le seguenti variabili "
-"dovranno essere impostate per permettere l'avvio automatico:"
+"Alcune variabili vanno impostate nel firmware Genesi per poter avviare il "
+"sistema in automatico. Al termine della installazione il sistema verrà "
+"riavviato. Al prompt del firmware le seguenti variabili dovranno essere "
+"impostate per permettere l'avvio automatico:"
 
 #. Type: note
 #. Description
@@ -65,9 +64,8 @@ msgstr "Diversamente sarà possibile avviare il kernel a mano scrivendo:"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "al prompt di OpenFirmware."
+msgstr "al prompt del firmware."
 
 #. Type: note
 #. Description
@@ -95,14 +93,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Questa operazione dovrà essere fatta solo la prima volta. Dopodiché sarà "
 "necessario eseguire il comando «boot» oppure riavviare il sistema per "
-"proseguire con la seconda fase dell'installazione."
+"accedere al nuovo sistema installato."
 
 #. Type: note
 #. Description
