--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-12 07:30+0200\n"
+"PO-Revision-Date: 2006-09-24 15:55+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,6 @@ msgstr "Pokračovanie bez zavádzača"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -37,9 +36,9 @@ msgid ""
 "to enable auto-booting:"
 msgstr ""
 "Na automatické spúšťanie systému je potrebné nastavenie niektorých "
-"premenných v Pegasos OpenFirmware. Na konci inštalácie sa systém reštartuje. "
-"V príkazovom režime Pegasos OpenFirmware môžete umožniť automatické "
-"štartovanie nastavením nasledovných premenných:"
+"premenných v Genesi firmware. Na konci inštalácie sa systém reštartuje. V "
+"príkazovom režime firmware môžete umožniť automatické štartovanie nastavením "
+"nasledovných premenných:"
 
 #. Type: note
 #. Description
@@ -51,9 +50,8 @@ msgstr "Alebo môžete zaviesť kernel manuálne pomocou :"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "v príkazovom režime OpenFirmware."
+msgstr "v príkazovom režime firmware."
 
 #. Type: note
 #. Description
@@ -80,13 +78,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Stačí to urobiť len raz. Potom zadajte príkaz \"boot\" alebo reštartujte "
-"systém, aby ste sa dostali do ďalšej etapy inštalácie systému."
+"systém, aby ste sa dostali do vášho nového nainštalovaného systému."
 
 #. Type: note
 #. Description
