--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-23 09:48+0100\n"
+"PO-Revision-Date: 2006-09-24 13:56+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -88,14 +88,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Du kommer endast behöva göra det här en gång.  Efteråt ska du ange kommandot "
-"\"boot\" eller starta om systemet till ditt nyligen installerade Debian GNU/"
-"Linux-system."
+"Du behöver endast göra det här en gång.  Efteråt kan du ange kommandot \"boot"
+"\" eller starta om systemet för att fortsätta till ditt nyligen installerade "
+"system."
 
 #. Type: note
 #. Description
