--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-15 09:44+0200\n"
+"PO-Revision-Date: 2006-09-24 17:02+0200\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -29,17 +29,16 @@ msgstr "Seguir sen cargador de inicio"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"É necesario estabrecer algunhas variables en Pegasos OpenFirmware para que o "
-"seu sistema arrinque automaticamente. Ao rematar a instalación, o sistema "
-"hase reiniciar. No indicativo de Pegasos OpenFirmware, estabreza as "
-"seguintes variables de OpenFirmware para permitir o inicio automático:"
+"É necesario establecer algunhas variables no firmware Genesi para que o seu "
+"sistema arrinque automaticamente. Ao rematar a instalación, o sistema hase "
+"reiniciar. No indicativo do firmware, estableza as seguintes variables do "
+"firmware para permitir o inicio automático:"
 
 #. Type: note
 #. Description
@@ -53,9 +52,8 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "no indicativo de OpenFirmware."
+msgstr "no indicativo do firmware."
 
 #. Type: note
 #. Description
@@ -73,7 +71,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"É necesario estabrecer algunhas variables no firmware de Netwinder NeTTrom "
+"É necesario establecer algunhas variables no firmware de Netwinder NeTTrom "
 "para que o seu sistema inicie linux automaticamente. Ao rematar esta etapa "
 "de instalación, o sistema ha iniciarse, e o firmware ha tratar de "
 "autoiniciarse. Pode abortalo premendo calquera tecla; despois háselle "
@@ -83,13 +81,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Só ha ter que facer isto unha vez. Despois, introduza a orde \"boot\" ou "
-"reinicie o sistema para continuar coa seguinte etapa da instalación."
+"reinicie o sistema para iniciar o seu sistema recén instalado."
 
 #. Type: note
 #. Description
