--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -46,19 +46,19 @@ msgstr ""
 #: ../nobootloader.templates:9
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
+msgstr "બીજી રીતે, તમે આ દાખલ કરીને જાતે કર્નલ બુટ કરી શકો છો :"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
 msgid "at the firmware prompt."
-msgstr ""
+msgstr "ફર્મવેર પ્રોમ્પ્ટ વખતે."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "આપમેળે બુટ માટે ફર્મવેર ચલો ગોઠવો"
 
 #. Type: note
 #. Description
