--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-23 10:55+0000\n"
-"PO-Revision-Date: 2006-09-21 23:04+0900\n"
+"PO-Revision-Date: 2006-09-24 23:10+0900\n"
 "Last-Translator:  Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian L10n Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,17 +29,16 @@ msgstr "ブートローダなしで続ける"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"あなたのシステムで Debian を自動的に起動するために、Pegasos OpenFirmware にい"
+"あなたのシステムで Debian を自動的に起動するために、Genesi ファームウェアにい"
 "くつかの変数を設定する必要があります。このインストールの終わりに、システムは"
-"再起動します。Pegasos OpenFirmware プロンプトでは、自動起動できるように、次の"
-"ように OpenFirmware 変数を設定します:"
+"再起動します。ファームウェアプロンプトでは、自動起動できるように、次のように"
+"ファームウェア変数を設定します:"
 
 #. Type: note
 #. Description
@@ -52,9 +51,8 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid "at the firmware prompt."
-msgstr "を OpenFirmware プロンプトで入力。"
+msgstr "をファームウェアプロンプトで入力。"
 
 #. Type: note
 #. Description
@@ -81,13 +79,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:32
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"これを 1 度だけ行う必要があります。そのあとで、次のインストールステージに進む"
-"ために、\"boot\" コマンドを入力するかシステムを再起動します。"
+"これを 1 度だけ行う必要があります。そのあとで、新しいインストールシステムに進"
+"むために、\"boot\" コマンドを入力するかシステムを再起動します。"
 
 #. Type: note
 #. Description
