Avoid splitting a sentence in two parts
r40922

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ nobootloader (1.11) UNRELEASED; urgency=low
   [ Sven Luther ]
   * Update template for Genisi systems. Closes #388591.
 
+  [ Christian Perrier ]
+  * Avoid splitting a sentence in two parts which can make translations
+    difficult to handle.
+
  -- Frans Pop <fjp@debian.org>  Fri, 22 Sep 2006 13:18:54 +0200
 
 nobootloader (1.10) unstable; urgency=low
