[l10n] [SILENT_COMMIT] Run debconf-updatepo on all packages
r40927

--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2005-04-09 14:08+0300\n"
 "Last-Translator: Andrei Darashenka <adorosh2@it.org.by>\n"
 "Language-Team: Byelarusian <be@li.org>\n"
@@ -50,14 +50,9 @@ msgstr "у у у:"
 #: ../nobootloader.templates:9
 #, fuzzy
 msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
 msgstr "у:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid "at the firmware prompt."
-msgstr ""
 
 #. Type: note
 #. Description
