--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-15 13:29+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
@@ -48,16 +48,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativt vil du kunne starte kernen op manuelt ved at skrive :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "ved OpenFirmware-prompten."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Alternativt vil du kunne starte kernen op manuelt ved at skrive :"
 
 #. Type: note
 #. Description
@@ -119,3 +114,7 @@ msgid ""
 msgstr ""
 "Du bliver nødt til at starte op manuelt med ${KERNEL}-kernen på partitionen "
 "${BOOT} og give kommandoen ${ROOT} som kerneparameter."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "ved OpenFirmware-prompten."
