--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dz\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-17 22:37+0530\n"
 "Last-Translator: Jurmey Rabgay <jur_gay@yahoo.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
@@ -51,16 +51,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "ཐབས་གཞན་གྱིས་ ཁྱོད་ཀྱིས་ཐོ་བཀོད་འབད་བའི་ཐོག་ལས་ཀར་ནེལ་འདི་ལག་ཐོག་ལས་བུཊི་འབད་ཚུགས།"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ལུ་ནུས་སྤེལ།"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "ཐབས་གཞན་གྱིས་ ཁྱོད་ཀྱིས་ཐོ་བཀོད་འབད་བའི་ཐོག་ལས་ཀར་ནེལ་འདི་ལག་ཐོག་ལས་བུཊི་འབད་ཚུགས།"
 
 #. Type: note
 #. Description
@@ -120,3 +115,7 @@ msgid ""
 msgstr ""
 "ཀར་ནེལ་སྒྲུབ་རྟགས་བཟུམ་སྦེ་རྩིས་སྤྲོད་འབད་ཡོད་མི་${BOOT} དང་ ${ROOT}བར་བཅད་ལུ་ཀར་ནེལ་ "
 "${KERNEL}འདི་དང་མཉམ་ཁྱོད་ཀྱིས་ལག་ཐོག་ལས་བུཊི་འབད་དགོ"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ལུ་ནུས་སྤེལ།"
