--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-07-12 14:54+0300\n"
 "Last-Translator: Siim Põder <windo@windowlicker.dyn.ee>\n"
 "Language-Team: Eesti <linuxiabi@hot.ee>\n"
@@ -40,16 +40,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Teise variandina võid tuuma ka käsitsi alglaadida, sisestades:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "OpenFirmware käsureal."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Teise variandina võid tuuma ka käsitsi alglaadida, sisestades:"
 
 #. Type: note
 #. Description
@@ -110,3 +105,7 @@ msgid ""
 msgstr ""
 "Pead alglaadima käsitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
 "tuuma argumendiks ${ROOT}."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "OpenFirmware käsureal."
