--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian-installer 1st-stage master file HR\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2005-03-05 21:51+0100\n"
 "Last-Translator: Krunoslav Gernhard <kruno@linux.hr>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
@@ -45,16 +45,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativno, moći ćete ručno bootati kernel unoseći:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "na OpenFirmware promptu."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Alternativno, moći ćete ručno bootati kernel unoseći:"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "Morat ćete ručno podignuti sustav s kernelom ${KERNEL} na particiji ${BOOT} "
 "i ${ROOT}, kao argumentima proslijeđenim kernelu."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "na OpenFirmware promptu."
