--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-08-20 07:22+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian>\n"
@@ -46,16 +46,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "A rendszermag kézzel is indítható lesz, így:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "Ez a fenti OpenFirmware-parancssorral lehetséges."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "A rendszermag kézzel is indítható lesz, így:"
 
 #. Type: note
 #. Description
@@ -116,3 +111,7 @@ msgid ""
 msgstr ""
 "A rendszert kézzel kell indítani a ${BOOT} partíción lévő ${KERNEL} "
 "rendszermaggal a ${ROOT}-t átadva annak argumentumaként."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "Ez a fenti OpenFirmware-parancssorral lehetséges."
