--- a/debian/po/is.po
+++ b/debian/po/is.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: is\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-08-13 19:02+0000\n"
 "Last-Translator: David Steinn Geirsson <davidgeirs@gmail.com>\n"
 "Language-Team: Icelandic <debian-user-icelandic@lists.debian.org>\n"
@@ -47,16 +47,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Að öðrum kosti munt þú geta ræst kjarnann handvirkt með því að skrifa:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "í OpenFirmware skelinni."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Að öðrum kosti munt þú geta ræst kjarnann handvirkt með því að skrifa:"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "Þú munt þurfa að ræsa handvirkt með kjarnanum ${KERNEL} á disksneiðinni "
 "${BOOT} og setja ${ROOT} sem viðfang."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "í OpenFirmware skelinni."
