--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-14 12:11-0400\n"
 "Last-Translator:  Sunjae park <darehanl@gmail.com>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
@@ -45,16 +45,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "아니면, 다음을 입력해서 수동으로 커널을 부팅시킬 수도 있습니다 :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "OpenFirmware 프롬프트에서."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "아니면, 다음을 입력해서 수동으로 커널을 부팅시킬 수도 있습니다 :"
 
 #. Type: note
 #. Description
@@ -113,3 +108,7 @@ msgid ""
 msgstr ""
 "수동으로 ${BOOT} 파티션의 ${KERNEL} 커널을 사용하고, ${ROOT} 문자열을 커널 인"
 "수로 넘겨 부팅해야 할 것입니다."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "OpenFirmware 프롬프트에서."
