--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mk\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-07-16 18:45+0200\n"
 "Last-Translator: Georgi Stanojevski <glisha@gmail.com>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
@@ -47,16 +47,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Алтернативно, ќе можеш да го бутираш кернелот рачно внесувајќи:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "на OpenFirmware промтот."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Алтернативно, ќе можеш да го бутираш кернелот рачно внесувајќи:"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "Ќе треба да бутираш рачно со кернелот ${KERNEL} на партицијата ${BOOT}и "
 "${ROOT} пренесен како аргумент на кернелот."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "на OpenFirmware промтот."
