--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-16 16:44+0300\n"
 "Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
@@ -60,16 +60,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Sau veţi putea să porniţi nucleul manual introducând:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "la promptul OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Sau veţi putea să porniţi nucleul manual introducând:"
 
 #. Type: note
 #. Description
@@ -131,3 +126,7 @@ msgid ""
 msgstr ""
 "Va trebui să porniţi manual cu nucleul ${KERNEL} pe partiţia ${BOOT}, iar "
 "${ROOT} trebuie plasat ca argument de nucleu."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "la promptul OpenFirmware."
