--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: sl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-04-26 00:10+0100\n"
 "Last-Translator: Jure Čuhalev <gandalf@owca.info>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
@@ -58,16 +58,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Vedite, da boste lahko pozneje zagnali jedro ročno z ukazom :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "na OpenFirmware pozivniku."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Vedite, da boste lahko pozneje zagnali jedro ročno z ukazom :"
 
 #. Type: note
 #. Description
@@ -128,3 +123,7 @@ msgid ""
 msgstr ""
 "Zagnati boste mogli ročno z jedrom ${KERNEL} na razdelkih ${BOOT} in "
 "${ROOT}, podanih kot argumenti jedra."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "na OpenFirmware pozivniku."
