--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-21 18:04+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
@@ -50,16 +50,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Hoặc bạn có thể tự khởi động hạt nhân bằng cách nhập:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "tại dấu nhắc OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Hoặc bạn có thể tự khởi động hạt nhân bằng cách nhập:"
 
 #. Type: note
 #. Description
@@ -120,3 +115,7 @@ msgid ""
 msgstr ""
 "Bạn sẽ cần phải tự khởi động với hạt nhân ${KERNEL} trên phân vùng ${BOOT} "
 "và gởi ${ROOT} qua dạng đối số hạt nhân."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "tại dấu nhắc OpenFirmware."
