--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-06-26 01:17+0300\n"
 "Last-Translator: Ossama M. Khayat <okhayat@yahoo.com>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
@@ -44,16 +44,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "عوضاً عن ذلك، ستكون قادراً على إقلاع النواة يدوياً بكتابة :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "عند ملقّن OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "عوضاً عن ذلك، ستكون قادراً على إقلاع النواة يدوياً بكتابة :"
 
 #. Type: note
 #. Description
@@ -112,3 +107,7 @@ msgid ""
 msgstr ""
 "ستضطر إلى الإقلاع يدويّاً بنواة ${KERNEL} على الجزء ${BOOT} و بتمرير ${ROOT} "
 "كمعطى للنواة."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "عند ملقّن OpenFirmware."
