--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-05-04 20:00+0600\n"
 "Last-Translator: Progga <progga@BengaLinux.Org>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
@@ -51,16 +51,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "বিকল্প ব্যবস্থা হিসেবে, এটি লিখে আপনি নিজ হাতে কার্নেলকে বুট করতে পারবেন :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "ওপেনফার্মওয়্যারের প্রম্পটে।"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "বিকল্প ব্যবস্থা হিসেবে, এটি লিখে আপনি নিজ হাতে কার্নেলকে বুট করতে পারবেন :"
 
 #. Type: note
 #. Description
@@ -121,3 +116,7 @@ msgid ""
 msgstr ""
 "আপনাকে ${BOOT} পার্টিশনের ${KERNEL} কার্নেল ব্যবহার করে এবং ${ROOT}-কে কার্নেলের "
 "আর্গুমেন্ট হিসেবে ব্যবহার করে নিজ হাতেই বুট করতে হবে।"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "ওপেনফার্মওয়্যারের প্রম্পটে।"
