--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bs\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-04-11 11:42+0100\n"
 "Last-Translator: Safir Secerovic <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
@@ -53,16 +53,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativno, možete podići kernel ručno unoseći :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "na OpenFirmware promptu."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Alternativno, možete podići kernel ručno unoseći :"
 
 #. Type: note
 #. Description
@@ -123,3 +118,7 @@ msgid ""
 msgstr ""
 "Trebati ćete ručno podignuti sistem sa ${KERNEL} kernelom na particiji "
 "${BOOT} i ${ROOT} proslijeđenim kao argumentom za kernel."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "na OpenFirmware promptu."
