--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-15 10:39+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
@@ -46,16 +46,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativament, podreu arrencar el nucli manualment introduint:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "a l'indicatiu d'OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Alternativament, podreu arrencar el nucli manualment introduint:"
 
 #. Type: note
 #. Description
@@ -119,3 +114,7 @@ msgid ""
 msgstr ""
 "Necessitareu arrencar manualment amb el nucli ${KERNEL} a la partició "
 "${BOOT} i passar ${ROOT} com a argument per al nucli."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "a l'indicatiu d'OpenFirmware."
