--- a/debian/po/cy.po
+++ b/debian/po/cy.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-03-17 18:02+0000\n"
 "Last-Translator: Dafydd Harries <daf@muse.19inch.net>\n"
 "Language-Team: Welsh <daf@muse.19inch.net>\n"
@@ -44,16 +44,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Neu fe allwch fŵtio'r cnewyllyn â llaw gan roi :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "ger y hybydd OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Neu fe allwch fŵtio'r cnewyllyn â llaw gan roi :"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "Bydd rhaid i chi fŵtio â llaw gyda'r cnewyllyn ${KERNEL} ar y rhaniad "
 "${BOOT} a gyda ${ROOT} wedi ei benodi fel ymresymiad cnewyllyn."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "ger y hybydd OpenFirmware."
