--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-07-16 15:52+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
@@ -47,16 +47,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alimaniere, vi povos mane ekŝargi la kernon per enskribu:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "dum la firmvara 'OpenFirmware' invito"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Alimaniere, vi povos mane ekŝargi la kernon per enskribu:"
 
 #. Type: note
 #. Description
@@ -116,3 +111,7 @@ msgid ""
 msgstr ""
 "Vi bezonos mane ekŝargi per la '${KERNEL}'-kerno de '${BOOT}'-diskpartigo "
 "kaj doni '${ROOT}' kiel argumento al ĉi kerno."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "dum la firmvara 'OpenFirmware' invito"
