--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-10 01:59+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
@@ -50,16 +50,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Bestela, nukleoa eskuz abiaraz dezakezu hau sartuz:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "OpenFirmware-ren gonbitean."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Bestela, nukleoa eskuz abiaraz dezakezu hau sartuz:"
 
 #. Type: note
 #. Description
@@ -119,3 +114,7 @@ msgid ""
 msgstr ""
 "Eskuz abiarazi beharko duzu ${KERNEL} nukleoarekin ${BOOT} partizioan eta "
 "${ROOT} nukleoaren argumentu gisa pasatu."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "OpenFirmware-ren gonbitean."
