--- a/debian/po/fa.po
+++ b/debian/po/fa.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fa\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2004-09-06 10:53+0200\n"
 "Last-Translator: Arash Bijanzadeh\n"
 "Language-Team:  <fa@li.org>\n"
@@ -42,14 +42,9 @@ msgstr ""
 #: ../nobootloader.templates:9
 #, fuzzy
 msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
 msgstr "شما قادر خواهید بود در آینده این عملیات را لغو کنید."
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid "at the firmware prompt."
-msgstr ""
 
 #. Type: note
 #. Description
