--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-19 10:11+0300\n"
 "Last-Translator: Tapio Lehtonen <tale@debian.org>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
@@ -48,16 +48,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Tai voit käynnistää ytimen itse komennolla:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "OpenFirmwaren kehoitteessa."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Tai voit käynnistää ytimen itse komennolla:"
 
 #. Type: note
 #. Description
@@ -119,3 +114,7 @@ msgid ""
 msgstr ""
 "Ydin ${KERNEL} on käynnistettävä itse levyosiolta ${BOOT} ja välitettävä "
 "${ROOT} ytimelle parametrina."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "OpenFirmwaren kehoitteessa."
