--- a/debian/po/kk.po
+++ b/debian/po/kk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian Installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2005-12-20 10:00+0100\n"
 "Last-Translator: Talgat Daniyarov <tdaniyar@hotmail.com>\n"
 "Language-Team: Kazakh\n"
@@ -46,16 +46,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Немесе сіз ядроны өзіңіз келесі командалармен жүктей аласыз:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "OpenFirmware шақыруынан."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Немесе сіз ядроны өзіңіз келесі командалармен жүктей аласыз:"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "${KERNEL} ядросын өзіңіз қайта жүктеуіңіз қажет және оған дәлел ретінде "
 "${BOOT} және ${ROOT} тапсыруыңыз керек."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "OpenFirmware шақыруынан."
