--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: km\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-08-15 13:50+0700\n"
 "Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
@@ -49,16 +49,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "អ្នក​អាច​ចាប់​ផ្តើម​ខឺណែល​ដោយ​ដៃ ដោយ​បញ្ចូល ៖"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "នៅ​ត្រង់​ប្រអប់ OpenFirmware ។"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "អ្នក​អាច​ចាប់​ផ្តើម​ខឺណែល​ដោយ​ដៃ ដោយ​បញ្ចូល ៖"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "អ្នក​នឹង​ត្រូវ​ចាប់ផ្ដើម​ដោយ​ដៃ ដោយ​ហុច​ខឺណែល ${KERNEL} ជា​អាគុយម៉ង់​ខឺណែល នៅ​លើ​ភាគថាស ${BOOT} និង "
 "${ROOT} ។"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "នៅ​ត្រង់​ប្រអប់ OpenFirmware ។"
