--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-04-20 06:15+0000\n"
 "Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
@@ -40,13 +40,8 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid "at the firmware prompt."
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
 msgstr ""
 
 #. Type: note
