--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-02 22:53+0300\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -47,16 +47,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Arba, galėsite įkelti branduolį rankiniu būdu, įvesdami :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "esant OpenFirmware kvietimui (prompt)."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Arba, galėsite įkelti branduolį rankiniu būdu, įvesdami :"
 
 #. Type: note
 #. Description
@@ -117,3 +112,7 @@ msgid ""
 msgstr ""
 "Jums teks atlikti įkeltį rankiniu būdu, naudojant branduolį ${KERNEL}, "
 "esantį disko skirsnyje ${BOOT}, ir perduodant jam parametrą ${ROOT}."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "esant OpenFirmware kvietimui (prompt)."
