--- a/debian/po/mr.po
+++ b/debian/po/mr.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: template\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-08-01 15:02+0530\n"
 "Last-Translator: Priti D. Patil <prithisd@cdacmumbai.in> <prithisd@gmail."
 "com>\n"
@@ -49,14 +49,9 @@ msgstr "इं इं:"
 #: ../nobootloader.templates:9
 #, fuzzy
 msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
 msgstr "द्वारा:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid "at the firmware prompt."
-msgstr ""
 
 #. Type: note
 #. Description
