--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-09 20:18+0200\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
@@ -50,16 +50,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Eller du kan starte kjernen manuelt ved å taste:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "ved kommandolinja til OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Eller du kan starte kjernen manuelt ved å taste:"
 
 #. Type: note
 #. Description
@@ -122,3 +117,7 @@ msgid ""
 msgstr ""
 "Du må starte opp manuelt med kjernen ${KERNEL} på partisjonen ${BOOT} og "
 "sende med ${ROOT} som kjerneparameter."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "ved kommandolinja til OpenFirmware."
