--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-07-18 12:11+0530\n"
 "Last-Translator: A S Alam <apbrar@gmail.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
@@ -52,16 +52,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "ਨਾਲ ਹੀ, ਤੁਸੀਂ ਇਹ ਭਰਕੇ ਕਰਨਲ ਨੂੰ ਦਸਤੀ ਬੂਟ ਕਰਨ ਦੇ ਯੋਗ ਹੋਵੋਗੇ:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "OpenFirmware ਪਰਾਉਟ ਤੇ।"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "ਨਾਲ ਹੀ, ਤੁਸੀਂ ਇਹ ਭਰਕੇ ਕਰਨਲ ਨੂੰ ਦਸਤੀ ਬੂਟ ਕਰਨ ਦੇ ਯੋਗ ਹੋਵੋਗੇ:"
 
 #. Type: note
 #. Description
@@ -120,3 +115,7 @@ msgid ""
 msgstr ""
 "ਤੁਹਾਨੂੰ ${BOOT} ਭਾਗ ਤੇ ${KERNEL} ਕਰਨਲ ਨਾਲ ਬੂਟ ਕਰਨ ਦੀ ਜਰੂਰਤ ਪਵੇਗੀ ਅਤੇ ਕਰਨਲ ਮੁੱਲ ਤੌਰ ਤੇ "
 "${ROOT} ਦੇਣਾ ਪਵੇਗਾ।"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "OpenFirmware ਪਰਾਉਟ ਤੇ।"
