--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-07-18 22:43+0200\n"
 "Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
@@ -45,16 +45,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternatywnie możesz uruchomić jądro ręcznie wprowadzając :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "przy znaku zachęty OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Alternatywnie możesz uruchomić jądro ręcznie wprowadzając :"
 
 #. Type: note
 #. Description
@@ -115,3 +110,7 @@ msgid ""
 msgstr ""
 "Będziesz musiał uruchamiać system ręcznie z użyciem jądra ${KERNEL}, z "
 "partycji ${BOOT}, przekazując ${ROOT} jako jego argument."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "przy znaku zachęty OpenFirmware."
