--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-15 21:57+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -52,16 +52,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Или вы можете загрузить ядро вручную с помощью команд:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "из приглашения OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Или вы можете загрузить ядро вручную с помощью команд:"
 
 #. Type: note
 #. Description
@@ -122,3 +117,7 @@ msgid ""
 msgstr ""
 "Вам придётся загружать ядро ${KERNEL} вручную с раздела ${BOOT} и передать "
 "ему в качестве аргумента ${ROOT}."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "из приглашения OpenFirmware."
