--- a/debian/po/se.po
+++ b/debian/po/se.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: se\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-08-22 11:39+0200\n"
 "Last-Translator: Børre Gaup <boerre@skolelinux.no>\n"
 "Language-Team: Northern Sami <se@li.org>\n"
@@ -44,15 +44,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
+#, fuzzy
 msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
 msgstr "Evtolaččat sáhtát vuolggáhit čoahku jus čálát:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid "at the firmware prompt."
-msgstr ""
 
 #. Type: note
 #. Description
