--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-04-22 13:15+0200\n"
 "Last-Translator:  Elian Myftiu <elian.myftiu@gmail.com>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
@@ -46,16 +46,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Përndryshe, do mund të nisësh kernelin manualisht duke përdorur :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "në rreshtin e komandës OpenFirmware."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Përndryshe, do mund të nisësh kernelin manualisht duke përdorur :"
 
 #. Type: note
 #. Description
@@ -116,3 +111,7 @@ msgid ""
 msgstr ""
 "Do të duhet ta nisësh manualisht me kernelin ${KERNEL} në ndarjen ${BOOT} "
 "dhe duke kaluar ${ROOT} si argument të kernelit."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "në rreshtin e komandës OpenFirmware."
