--- a/debian/po/ta.po
+++ b/debian/po/ta.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-05-10 19:19+0530\n"
 "Last-Translator: Damodharan Rajalingam <r.damodharan@yahoo.co.in>\n"
 "Language-Team:  <tamil-DI@yahoogroups.com>\n"
@@ -45,13 +45,8 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:9
 msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
-msgid "at the firmware prompt."
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
 msgstr ""
 
 #. Type: note
