--- a/debian/po/th.po
+++ b/debian/po/th.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-09-17 17:09+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <l10n@opentle.org>\n"
@@ -44,16 +44,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "หรือมิฉะนั้น คุณก็ยังสามารถสั่งบูตเคอร์เนลเองโดยป้อนคำสั่ง:"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "ที่บรรทัดคำสั่งของ OpenFirmware"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "หรือมิฉะนั้น คุณก็ยังสามารถสั่งบูตเคอร์เนลเองโดยป้อนคำสั่ง:"
 
 #. Type: note
 #. Description
@@ -112,3 +107,7 @@ msgid ""
 msgstr ""
 "คุณต้องสั่งบูตเองโดยใช้เคอร์เนล ${KERNEL} ที่พาร์ทิชัน ${BOOT} โดยส่งอาร์กิวเมนต์ ${ROOT} "
 "ให้กับเคอร์เนล"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "ที่บรรทัดคำสั่งของ OpenFirmware"
