--- a/debian/po/xh.po
+++ b/debian/po/xh.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2005-06-13 14:08+0200\n"
 "Last-Translator: Canonical Ltd <translations@canonical.com>\n"
 "Language-Team: Xhosa <xh-translate@ubuntu.com>\n"
@@ -45,16 +45,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Ngenye indlela, uyakuba nako ukuyivula ngezandla i-kernel ngokungena :"
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "kwi-OpenFirmware ngokukhawuleza."
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "Ngenye indlela, uyakuba nako ukuyivula ngezandla i-kernel ngokungena :"
 
 #. Type: note
 #. Description
@@ -121,3 +116,7 @@ msgid ""
 msgstr ""
 "Kuya kufyneka ukuba uvule nge kernel ye- ${KERNEL} kwisahlukaniso u ${BOOT} "
 "kunye no ${ROOT} zidluliselwa njengempikiswano ye-kernel."
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "kwi-OpenFirmware ngokukhawuleza."
