--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-08-13 18:39+1200\n"
 "Last-Translator: Carlos Z.F. Liu <carlosliu@users.sourceforge.net>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
@@ -47,16 +47,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "另外，您还可以通过输入以下内容来手工启动内核："
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "在 Open Firmware 提示符之后。"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "另外，您还可以通过输入以下内容来手工启动内核："
 
 #. Type: note
 #. Description
@@ -113,3 +108,7 @@ msgid ""
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "您将需要手动启动 ${BOOT} 分区上的 ${KERNEL} 内核，并且添加内核参数 ${ROOT}。"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "在 Open Firmware 提示符之后。"
