--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2006-09-23 10:55+0000\n"
+"POT-Creation-Date: 2006-09-25 10:55+0000\n"
 "PO-Revision-Date: 2006-07-30 01:30+0800\n"
 "Last-Translator: Tetralet <tetralet@gmail.com>\n"
 "Language-Team: Debian-user in Chinese [Big5] <debian-chinese-big5@lists."
@@ -44,16 +44,11 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-msgid ""
-"Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "而或者，您也可以在 在 OpenFirmware 的提示文字上，輸入："
-
-#. Type: note
-#. Description
-#: ../nobootloader.templates:9
 #, fuzzy
-msgid "at the firmware prompt."
-msgstr "來手動啟動您的系統。"
+msgid ""
+"Alternatively, you will be able to boot the kernel manually by entering, at "
+"the firmware prompt:"
+msgstr "而或者，您也可以在 在 OpenFirmware 的提示文字上，輸入："
 
 #. Type: note
 #. Description
@@ -112,3 +107,7 @@ msgid ""
 msgstr ""
 "您將需要手動由 ${BOOT} 分割區的 ${KERNEL} Kernel 開機，並加上 ${ROOT} 以做為 "
 "Kernel 的參數。"
+
+#, fuzzy
+#~ msgid "at the firmware prompt."
+#~ msgstr "來手動啟動您的系統。"
